--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,9 @@
         <link href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
     <body>
+        <div class="wrapper">
         {% block content %}
         {% endblock content %}
+        </div>
     </body>
 </html>
