--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <main>
 {% for article in all_articles_list %}
 <section>
-<h3>{{ article.title }}</h3>
+<h3><a href="{% url  'article_detail' article.pk %}">{{ article.title }}</a></h3>
 <article>
 <p>{{ article.text }}</p>
 </article>
