--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -4,6 +4,7 @@
     <section>
         <h3>{{ article.title }}</h3>
         <article>
+            <img src="{{ article.photo.url }}" alt="{{ article.title }}" class="art-img">
             <p>{{ article.text|linebreaks }}</p>
         </article>
     </section>
