--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,8 @@
 <section>
 <h3><a href="{% url  'article_detail' article.pk %}">{{ article.title }}</a></h3>
 <article>
-<p>{{ article.text }}</p>
+    <img src="{{ article.photo.url }}" alt="{{ article.title }}" class="art-img">
+<p>{{ article.text|linebreaks }}</p>
 </article>
 </section>
 {% endfor %}
