added new article and article update and django is awesome always

--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -43,7 +43,7 @@ a:link {
 }
 
 ul {
-  list-style-type: none;
+  list-style-type: none;  /* get rid of the bullet */
   margin: 0;
   padding: 0;
   overflow: hidden;
