--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -7,6 +7,7 @@
             <img src="{{ article.photo.url }}" alt="{{ article.title }}" class="art-img">
             <p>{{ article.text|linebreaks }}</p>
         </article>
+        <a href="{% url 'article_edit' article.pk %}" class="btn btn-primary btn-sm">Edit Article</a>
     </section>
 </main>
 {% endblock content %}
