--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -7,7 +7,8 @@
             <img src="{{ article.photo.url }}" alt="{{ article.title }}" class="art-img">
             <p>{{ article.text|linebreaks }}</p>
         </article>
-        <a href="{% url 'article_edit' article.pk %}" class="btn btn-primary btn-sm">Edit Article</a>
+        <a href="{% url 'article_edit' article.pk %}" class="btn btn-primary btn-bg">Edit Article</a>
+        <a href="{% url 'article_delete' article.pk %}" class="btn btn-danger btn-bg">Delete Article</a>
     </section>
 </main>
 {% endblock content %}
